--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,13 @@
 komoot-test{
+aws{
+ key-id = "AKIA3DZULSSUR55ZUWFJ",
+ secret-key = "XOcRezqJMUEhZByd26S5O5AhQS"
+}
 
+
+notification-api{
+base-uri = "https://webhook.site/f34aa2ad-7a9c-47e3-9658-260351ffd14e"
+}
 notification-api{
 base-uri = "https://webhook.site/f34aa2ad-7a9c-47e3-9658-260351ffd14e"
 }
